--- a/Practical Tasks/project.json
+++ b/Practical Tasks/project.json
@@ -1,21 +1,18 @@
 {
-  "name": "Day2",
-  "description": "Blank Process",
+  "name": "Practical Tasks",
+  "description": "Tasks For Interview",
   "main": "Main.xaml",
   "dependencies": {
     "Microsoft.Activities.Extensions": "[2.0.6.9]",
-    "RepairAndSaveWorkbook.Activities": "[1.0.0]",
-    "UiPath.Excel.Activities": "[2.12.2-preview]",
-    "UiPath.Mail.Activities": "[1.12.3]",
-    "UiPath.PDF.Activities": "[3.5.0-preview]",
-    "UiPath.System.Activities": "[21.10.4]",
-    "UiPath.UIAutomation.Activities": "[21.10.5]",
-    "UiPath.Word.Activities": "[1.10.0-preview]"
+    "UiPath.Excel.Activities": "[2.12.3]",
+    "UiPath.Mail.Activities": "[1.15.1]",
+    "UiPath.System.Activities": "[22.4.0]",
+    "UiPath.UIAutomation.Activities": "[22.4.2-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "21.10.5.0",
+  "studioVersion": "22.4.0.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -44,13 +41,13 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": false
+    "modernBehavior": true
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "da7b1019-a5d7-4a08-b4a8-a3da22869aba",
+      "uniqueId": "b8d38191-2b24-4c50-90c0-ae3ebbbb28d8",
       "input": [],
       "output": []
     }
