--- a/Weekend Practice/project.json
+++ b/Weekend Practice/project.json
@@ -1,23 +1,18 @@
 {
-  "name": "Practical Tasks",
-  "description": "Tasks For Interview",
+  "name": "Weekend Practice",
+  "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "Microsoft.Activities.Extensions": "[2.0.6.9]",
-    "UiPath.DocumentUnderstanding.ML.Activities": "[1.13.2-preview]",
     "UiPath.Excel.Activities": "[2.12.3]",
-    "UiPath.IntelligentOCR.Activities": "[6.0.1-preview]",
     "UiPath.Mail.Activities": "[1.15.1]",
-    "UiPath.OmniPage.Activities": "[1.9.0-preview]",
-    "UiPath.PDF.Activities": "[3.6.0]",
     "UiPath.System.Activities": "[22.4.1]",
     "UiPath.UIAutomation.Activities": "[22.4.4]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "22.4.0.0",
-  "projectVersion": "1.0.1",
+  "studioVersion": "22.4.1.0",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -44,21 +39,14 @@
     "processOptions": {
       "ignoredFiles": []
     },
-    "fileInfoCollection": [
-      {
-        "editingStatus": "Publishable",
-        "testCaseId": "99840d26-4dfc-413b-81e5-292c39bc229d",
-        "testCaseType": "TestCase",
-        "fileName": "ACME.xaml"
-      }
-    ],
+    "fileInfoCollection": [],
     "modernBehavior": false
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "b8d38191-2b24-4c50-90c0-ae3ebbbb28d8",
+      "uniqueId": "6a0e58d4-2ed7-4059-a483-857c17101604",
       "input": [],
       "output": []
     }
